--- a/style2.css
+++ b/style2.css
@@ -1,12 +1,21 @@
 .jumbotron{
 	color:white;
 	font-size:46px;
-	background-image: url("../IMG/Space_pic.jpg");
+	background-image: url("../IMG/paris_pic.jpg");
 }
 .container{
-	background-color: light gray
+	background-color:none;
 }
 .video{width:100px;
 margin-left:auto;
 margin-right:auto;
+}
+
+.colored{background-color: none}
+
+blockquote{background-color: lightblue}
+
+.beach{display:block;
+	margin-left:auto;
+margin-right: auto;
 }
